--- a/configuration.properties
+++ b/configuration.properties
@@ -10,14 +10,14 @@ viceDeanPassword=ViceDean171+
 deanUsername=DeanBatch171
 deanPassword=Dean171+
 
-teacherUsername=Teacher1 
+teacherUsername=Teacher1
 teacherPassword=Teacher1
 
-studentUsername=StudentTeam2
-studentPassword=StudentTeam2
+studentUsername=US21TC01
+studentPassword=Aa123456
 
 
-
+#StudentTeam2
 
 
 
