--- a/configuration.properties
+++ b/configuration.properties
@@ -23,3 +23,23 @@ studentPassword=StudentTeam2
 
 
 
+
+emine
+
+
+Name=
+Surname= 
+Birthplace=
+Phone=
+Gender=
+Date of birth=
+Ssn=
+User Name=
+Password=
+
+
+
+
+
+
+
